--- a/icp1/Code/icp1.ipynb
+++ b/icp1/Code/icp1.ipynb
@@ -24,6 +24,7 @@
         "outputId": "e6051968-baab-4e2a-d6af-ed060fa13a89"
       },
       "source": [
+        "# Mounting a drive\n",
         "import pandas as pd\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
@@ -52,15 +53,16 @@
           "base_uri": "https://localhost:8080/",
           "height": 456
         },
-        "outputId": "c14d9206-e746-45f4-9fb2-0a843e6a4c79"
+        "outputId": "d8941407-4b16-4e93-9576-d30249b6c175"
       },
       "source": [
-        "myDF = pd.read_csv('drive/My Drive/Data.csv')\n",
+        "#Reading the dataset and Mapping 0 and 1 to M and B respectively.\n",
+        "DF = pd.read_csv('drive/My Drive/Data.csv')\n",
         "mapping = {'M': 0, 'B': 1 }\n",
-        "myDF = myDF.replace({'diagnosis': mapping})\n",
-        "myDF"
+        "DF = DF.replace({'diagnosis': mapping})\n",
+        "DF"
       ],
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -541,7 +543,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 15
         }
       ]
     },
@@ -554,13 +556,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "02b0b745-c8d3-4330-966b-db1998e5cf94"
+        "outputId": "1061a9dc-32f0-438b-ef92-c2604bb5c60d"
       },
       "source": [
-        "corr=myDF.corr()\n",
+        "# Correlation between the features.\n",
+        "corr=DF.corr()\n",
         "corr"
       ],
-      "execution_count": 4,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1854,7 +1857,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 16
         }
       ]
     },
@@ -1867,25 +1870,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "cd7cfd13-8823-4024-b850-c065d5c549f4"
+        "outputId": "4d209583-51c0-4b23-d8ca-cdc6140d6ef0"
       },
       "source": [
+        "#Visualising the correlation among features using a heatmap.\n",
         "import seaborn as sns\n",
         "from matplotlib import pyplot as plt\n",
         "plt.figure(figsize=(40,40))\n",
         "sns.heatmap(corr, annot=True,cmap='BuGn')\n",
         "plt.show()\n"
       ],
-      "execution_count": 5,
+      "execution_count": 17,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n"
-          ],
-          "name": "stderr"
-        },
         {
           "output_type": "display_data",
           "data": {
@@ -1910,12 +1906,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 334
         },
-        "outputId": "0de3fb4a-5a0e-41f0-c8aa-c306760497a1"
+        "outputId": "78fb6215-f5a9-4cf6-db5c-d3c4da00349d"
       },
       "source": [
-        "myDF.describe()"
+        "#Displaying statistical data of the data frame.\n",
+        "DF.describe()"
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2284,7 +2281,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 18
         }
       ]
     },
@@ -2297,12 +2294,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 595
         },
-        "outputId": "f437217b-ebd0-4896-be32-8aee79b21bee"
+        "outputId": "9c799068-8c51-4b97-e320-0af7465f8445"
       },
       "source": [
-        "myDF.dtypes"
+        "#Displaying the datatypes of all the features in the dataframes.\n",
+        "DF.dtypes"
       ],
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2347,7 +2345,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 19
         }
       ]
     },
@@ -2360,12 +2358,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "dd6b6f3c-12ef-450d-9984-2e602b2a999a"
+        "outputId": "c8077278-7d82-4b5c-f937-c48f17d11644"
       },
       "source": [
-        "myDF.shape"
+        "#Displaying the shape of the dataframe.\n",
+        "DF.shape"
       ],
-      "execution_count": 12,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2377,7 +2376,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 20
         }
       ]
     },
@@ -2390,26 +2389,26 @@
           "base_uri": "https://localhost:8080/",
           "height": 282
         },
-        "outputId": "419002a9-4dd3-4fee-f01b-97a44ef1f478"
+        "outputId": "d1df6646-9a71-45a0-c04f-2035385e7ad3"
       },
       "source": [
+        "#Displaying the count of M and B in the target column and visualizing the same using a bargraph.\n",
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
         " \n",
-        "counts = myDF['diagnosis'].value_counts().to_dict()\n",
+        "count = DF['diagnosis'].value_counts().to_dict()\n",
         " \n",
-        "height = [counts[0], counts[1]]\n",
+        "height = [count[0], count[1]]\n",
         "bars = ('M', 'B')\n",
-        "y_pos = np.arange(len(bars))\n",
+        "y = np.arange(len(bars))\n",
         " \n",
-        "plt.bar(y_pos, height)\n",
+        "plt.bar(y, height)\n",
         " \n",
-        "plt.xticks(y_pos, bars)\n",
+        "plt.xticks(y, bars)\n",
         " \n",
         "plt.show()\n",
-        "counts"
+        "count"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
